--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
---index-url https://download.pytorch.org/whl/cpu
-torch==2.4.1
-streamlit==1.41.1
-langchain==0.3.7
-langchain-community==0.3.5
-langchain-groq==0.2.1
-langchain-huggingface==0.1.2
-pypdf==5.1.0
-chromadb==0.5.15
-sentence-transformers==3.2.1
+streamlit
+langchain
+langchain-community
+langchain-groq
+langchain-huggingface
+pypdf
+chromadb
+sentence-transformers
 pysqlite3-binary
