--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-langchain
-langchain-community
+langchain>=0.3.0
+langchain-community>=0.3.0
+langchain-core>=0.3.0
 langchain-groq
 langchain-huggingface
+streamlit
 pypdf
 chromadb
 sentence-transformers
